[DREM-35]レイアウト指示書の適用
コンテツ表示用Adapterを使うべきではないSTBデバイスリストの修正

Change-Id: Id904166f2057fe2d654a9ad76f96446398ae04fe

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_setting_main_layout.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/launch_image_bottom_margin"
             android:baselineAlignBottom="true"
-            android:src="@mipmap/stb_select_error_device_icon" />
+            android:src="@mipmap/startup_icon_04" />
 
     </RelativeLayout>
 
