--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -14,7 +14,7 @@
          android:id="@+id/paring_search_image"
          android:layout_width="@dimen/launch_stb_start_up_icon1_width"
          android:layout_height="@dimen/launch_stb_start_up_icon1_high"
-         android:src="@mipmap/stb_select_d_account_setting_icon"
+         android:src="@mipmap/startup_icon_04"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
@@ -38,6 +38,7 @@
         android:layout_below="@id/d_account_not_registration_message"
         android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:layout_marginTop="@dimen/launch_stb_account_error_margin_top"
         android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
