--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -34,6 +34,7 @@
     <dimen name="launch_stb_start_up_icon2_high">44dp</dimen>
     <dimen name="launch_stb_start_up_icon2_width">163dp</dimen>
     <dimen name="launch_function_menu_icon_height">44dp</dimen>
+    <dimen name="launch_stb_account_error_margin_top">40dp</dimen>
     <dimen name="launch_function_menu_reload_margin_end">38dp</dimen>
     <dimen name="launch_function_menu_arrow_margin_end">78dp</dimen>
     <dimen name="launch_function_menu_arrow_margin_top">14dp</dimen>
@@ -65,7 +66,7 @@
     <dimen name="list_item_title_text_size">14sp</dimen>
     <dimen name="list_item_time_text_size">12dp</dimen>
     <dimen name="list_item_today_ranking_time_size">12dp</dimen>
-    <dimen name="list_item_rank_num_text_size">10sp</dimen>
+    <dimen name="list_item_rank_num_text_size">10dp</dimen>
     <dimen name="list_item_rating_num_text_size">9sp</dimen>
     <dimen name="list_item_time_start_margin">5dp</dimen>
     <dimen name="list_item_common_result_rank_num_top_margin">5dp</dimen>
