[実装]([DREM-35]レイアウト指示書の適用)番組表,マイ番組表(指摘対応済み)
Change-Id: Id605ae5b5f17e3b2153072b8ba3047baea25a824

--- a/dTVTerminalApp/app/src/main/res/drawable/rectangele_all.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/rectangele_all.xml
@@ -5,12 +5,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="#777777" />
+            <solid android:color="@color/tv_program_list_ch_tab_bottom_line" />
         </shape>
     </item>
-    <item android:bottom="1dp">
+    <item android:bottom="@dimen/tv_program_list_tab_under_line">
         <shape>
-            <solid android:color="#111111" />
+            <solid android:color="@color/tv_program_list_ch_tab_bg" />
         </shape>
     </item>
  </layer-list>
