--- a/dTVTerminalApp/app/src/main/res/drawable/program_rectangele_start.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/program_rectangele_start.xml
@@ -5,12 +5,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="#000000" />
+            <solid android:color="@color/tv_program_list_root_view_bg" />
         </shape>
     </item>
-    <item android:left="1.5dp" android:top="1.5dp">
+    <item android:left="@dimen/tv_program_list_gap_between_programs" android:top="@dimen/tv_program_list_gap_between_programs" android:right="@dimen/tv_program_list_gap_between_programs">
     <shape>
-        <solid android:color="#222222" />
+        <solid android:color="@color/tv_program_list_cur_time_btn_bg" />
     </shape>
     </item>
  </layer-list>
