--- a/dTVTerminalApp/app/src/main/res/drawable/rectangele.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/rectangele.xml
@@ -5,12 +5,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="#FFFFFF" />
+            <solid android:color="@color/tv_program_list_ch_title_checked_line" />
         </shape>
     </item>
-    <item android:bottom="1.5dp">
+    <item android:bottom="@dimen/tv_program_list_ch_title_checked">
         <shape>
-            <solid android:color="#111111" />
+            <solid android:color="@color/tv_program_list_ch_tab_bg" />
         </shape>
     </item>
  </layer-list>
