--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/edit_my_channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/edit_my_channel_list_item.xml
@@ -5,8 +5,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/background_dark">
+                android:layout_height="match_parent">
 
 	<RelativeLayout
 		android:id="@+id/edit_my_channel_list_item_no"
@@ -20,9 +19,7 @@
 			android:layout_width="@dimen/edit_my_channel_list_item_no_tv_width"
 			android:layout_height="@dimen/edit_my_channel_list_item_no_tv_width"
 			android:layout_centerInParent="true"
-			android:background="@color/item_num_unregister_bg_black"
-			android:gravity="center"
-			android:textColor="@android:color/white"/>
+			android:gravity="center"/>
 	</RelativeLayout>
 	
 	<RelativeLayout
