--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/my_channel_edit_main_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/background_dark">
+                android:background="@color/my_channel_edit_main_root_bg">
 
 	<com.nttdocomo.android.tvterminalapp.view.NoScrollViewPager
 		android:id="@+id/my_channel_edit_main_layout_edit_vp"
