--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_channel_list_item_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_channel_list_item_layout.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="1.5dp"
-        android:background="#222222"
+        android:background="@drawable/tv_program_ch_title_bg"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -21,16 +20,9 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:textColor="@android:color/white" />
-
-        <ImageView
-            android:id="@+id/tv_program_channel_list_item_layout_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="5dp"
-            android:contentDescription="@null"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/ic_info_outline_white_24dp" />
+            android:layout_marginStart="@dimen/tv_program_list_ch_title_margin"
+            android:layout_marginEnd="@dimen/tv_program_list_ch_title_margin"
+            android:textSize="@dimen/tv_program_list_ch_title_text_size"
+            android:textColor="@color/tv_program_list_ch_title_text_color" />
     </LinearLayout>
 </RelativeLayout>
