--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item.xml
@@ -5,6 +5,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="1dp"
-    android:background="@android:color/black">
+    android:background="@color/tv_program_item_bg">
 </RelativeLayout>
