--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -271,6 +271,28 @@
     <dimen name="tv_program_list_time_scrollview_width">44dp</dimen>
     <dimen name="tv_program_list_time_line_width">48dp</dimen>
     <dimen name="tv_program_list_time_line_height">25dp</dimen>
+    <dimen name="tv_program_list_tab_text_size">14dp</dimen>
+    <dimen name="tv_program_list_cur_time_padding">10dp</dimen>
+    <dimen name="tv_program_list_margin_between_ch">1dp</dimen>
+    <dimen name="tv_program_list_ch_title_margin">16dp</dimen>
+    <dimen name="tv_program_list_ch_title_text_size">14dp</dimen>
+    <dimen name="tv_program_list_ch_title_checked">1.5dp</dimen>
+    <dimen name="tv_program_list_gap_between_programs">1dp</dimen>
+    <dimen name="tv_program_list_gap_left_time">1dp</dimen>
+    <dimen name="tv_program_list_tab_title_text_size">14dp</dimen>
+    <dimen name="tv_program_list_tab_under_line">1dp</dimen>
+    <dimen name="panel_start_time_margin_top">12dp</dimen>
+    <dimen name="panel_start_time_margin_left">8dp</dimen>
+    <dimen name="panel_start_time_margin_text_size">13dp</dimen>
+    <dimen name="panel_clip_margin_left">7dp</dimen>
+    <dimen name="panel_clip_margin_right">7dp</dimen>
+    <dimen name="panel_clip_margin_top">8dp</dimen>
+    <dimen name="panel_content_des_margin_top">12dp</dimen>
+    <dimen name="panel_content_thumbnail_width">122dp</dimen>
+    <dimen name="panel_content_thumbnail_height">69dp</dimen>
+	<dimen name="panel_content_thumbnail_margin_top">16dp</dimen>
+    <dimen name="tv_program_list_cur_time_height">1dp</dimen>
+    <dimen name="panel_content_detail_margin_top">4dp</dimen>
 
     <!--アプリケーション情報-->
     <dimen name="application_info_image_width">138dp</dimen>
