DREM-1394[実装]([DREM-35]レイアウト指示書の適用)録画番組対応
Change-Id: Ied1481754fa5a56fddf21a717859ecd929d85dd7

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -94,6 +94,7 @@
     <!--録画番組一覧-->
     <color name="recorded_background">#000000</color>
     <color name="recorded_contents_background">#222222</color>
+    <color name="record_download_status_color">#ffbb4e</color>
 
     <!--//STB選択-->
     <drawable name="color_white">#ffffff</drawable>
