DREM-1450 DREM-1449 [実装]([DREM-1-5]ホーム画面(最新仕様の反映))実装(内部・UI) ホーム画面、ランキングTOP画面の順位ラベル実装、チェックスタイル対応
Change-Id: Ieee1ba2c03d0843ac957f733152630387cdea832

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -120,6 +120,9 @@
     <dimen name="home_contents_thumbnail_new_label_height">18dp</dimen>
     <dimen name="home_contents_thumbnail_new_label_margin_left">4dp</dimen>
     <dimen name="home_contents_thumbnail_new_label_margin_top">4dp</dimen>
+    <dimen name="home_contents_thumbnail_rank_num_label_width">24dp</dimen>
+    <dimen name="home_contents_thumbnail_rank_num_label_height">18dp</dimen>
+    <dimen name="home_contents_thumbnail_rank_num_text_size">11dp</dimen>
 
     <!--コンテンツ詳細-->
     <dimen name="contents_header_close_button_size">24sp</dimen>
