--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -22,7 +22,19 @@
         android:layout_height="@dimen/home_contents_thumbnail_new_label_height"
         android:layout_marginLeft="@dimen/home_contents_thumbnail_new_label_margin_left"
         android:layout_marginTop="@dimen/home_contents_thumbnail_new_label_margin_top"
-        android:src="@drawable/label_status_new" />
+        android:src="@drawable/label_status_new"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/home_main_recyclerview_item_iv_rank_num"
+        android:layout_width="@dimen/home_contents_thumbnail_rank_num_label_width"
+        android:layout_height="@dimen/home_contents_thumbnail_rank_num_label_height"
+        android:layout_marginLeft="@dimen/home_contents_thumbnail_new_label_margin_left"
+        android:layout_marginTop="@dimen/home_contents_thumbnail_new_label_margin_top"
+        android:gravity="center"
+        android:textColor="@color/basic_text_color_white"
+        android:textSize="@dimen/home_contents_thumbnail_rank_num_text_size"
+        android:visibility="gone" />
 
 
     <ImageView
@@ -35,10 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/home_contents_thumbnail_text_bottom_margin"
-        android:layout_marginEnd="@dimen/home_contents_thumbnail_title_right_margin"
-        android:layout_marginStart="@dimen/home_contents_thumbnail_title_left_margin"
+        android:layout_centerHorizontal="true"
         android:orientation="vertical">
 
         <TextView
