--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -65,7 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@string/contents_info_thumbnail_text"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitXY" />
 
                 <LinearLayout
                     android:id="@+id/dtv_contents_detail_main_layout_thumbnail_btn"
@@ -79,18 +79,19 @@
                         android:id="@+id/dtv_contents_view_button"
                         android:layout_width="@dimen/contents_detail_watch_dtv_image_width"
                         android:layout_height="@dimen/contents_detail_watch_dtv_image_height"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_gravity="center"
                         android:contentDescription="@string/contents_info_thumbnail_button"
-                        android:src="@mipmap/ic_play_arrow_white_24dp" />
+                        android:src="@mipmap/thumb_icon_cast" />
                     <!--テキスト-->
                     <TextView
                         android:id="@+id/view_contents_button_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/contents_detail_16dp"
                         android:gravity="center"
                         android:textColor="@color/white_text"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="@dimen/contents_detail_16dp"
+                        android:textSize="@dimen/contents_detail_12dp"
                         android:visibility="gone" />
                 </LinearLayout>
 
