DREM-1393 [実装]([DREM-35]レイアウト指示書の適用)おすすめ番組・ビデオ
　各タブの内容の方の修正を行いました。

Change-Id: I9907d8784ffd5ec3881bc8aa0f1b85843004fc31

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -55,6 +55,7 @@
     <color name="recommend_list_background">#222222</color>
     <color name="recommend_list_text">#FFFFFF</color>
     <color name="recommend_list_border">#888888</color>
+    <color name="recommend_list_now_on_air">#FF8800</color>
     <!-- ランキング一覧 -->
     <color name="ranking_list_background">#222222</color>
     <color name="ranking_list_text">#FFFFFF</color>
