--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
@@ -10,9 +10,9 @@
 	<RelativeLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginBottom="10dp"
-		android:layout_marginLeft="10dp"
-		android:layout_marginTop="10dp">
+		android:layout_marginBottom="@dimen/recommend_list_general_margine"
+		android:layout_marginLeft="@dimen/recommend_list_general_margine"
+		android:layout_marginTop="@dimen/recommend_list_general_margine">
 
 		<ImageView
 			android:id="@+id/recommend_iv_thumbnail"
@@ -28,7 +28,8 @@
 			android:layout_centerVertical="true"
 			android:clickable="true"
 			android:src="@mipmap/icon_circle_opacity_clip"
-			android:layout_margin="@dimen/clip_common_margin"/>
+			android:layout_margin="@dimen/clip_common_margin"
+			android:visibility="gone"/>
 
 		<LinearLayout
 			android:id="@+id/recommend_title_des"
@@ -37,11 +38,51 @@
 			android:layout_alignBottom="@id/recommend_iv_thumbnail"
 			android:layout_alignTop="@id/recommend_iv_thumbnail"
 			android:layout_centerVertical="true"
-			android:layout_marginLeft="5dp"
-			android:layout_marginRight="15dp"
+			android:layout_marginLeft="@dimen/recommend_list_left_margine"
+			android:layout_marginRight="@dimen/recommend_list_right_margine"
 			android:layout_toLeftOf="@id/recommend_iv_clip"
 			android:layout_toRightOf="@id/recommend_iv_thumbnail"
 			android:orientation="vertical">
+
+			<!-- テレビ・ビデオタブ用のマージン -->
+			<View
+				android:id="@+id/recommend_tv_video_margin"
+				android:layout_width="@dimen/recommend_list_0dp"
+				android:layout_height="@dimen/recommend_list_tv_video_margin_top"
+				android:visibility="gone"
+				/>
+
+			<!-- その他タブ用のマージン -->
+			<View
+				android:id="@+id/recommend_dtv_danime_margin"
+				android:layout_width="@dimen/recommend_list_0dp"
+				android:layout_height="@dimen/recommend_list_dtv_danime_margin_top"
+				android:visibility="gone"/>
+
+			<!-- 放送日時とNOW ON AIRの行 -->
+			<LinearLayout
+				android:id="@+id/recommend_time_and_now_on_air"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="horizontal"
+				>
+				<TextView
+					android:id="@+id/recommend_time"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:textColor="@color/gray_text"
+					android:textSize="@dimen/list_item_today_ranking_time_size"
+					/>
+				<TextView
+					android:id="@+id/recommend_now_on_air"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:textColor="@color/recommend_list_now_on_air"
+					android:textSize="@dimen/list_item_today_ranking_time_size"
+					android:text="@string/now_on_air"
+					android:ellipsize="end"
+					/>
+			</LinearLayout>
 
 			<LinearLayout
 				android:layout_width="wrap_content"
@@ -52,22 +93,29 @@
 					android:id="@+id/recommend_title"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:paddingTop="8dp"
-					android:textColor="@color/recommend_list_text"/>
+					android:textColor="@color/recommend_list_text"
+					android:ellipsize="end"
+					/>
 
 				<TextView
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:paddingTop="8dp"
-					android:textColor="@color/recommend_list_text"/>
+					android:textColor="@color/recommend_list_text"
+					/>
 			</LinearLayout>
 
+			<RatingBar
+				android:id="@+id/recommend_rating_star"
+				style="@style/roomRatingBar"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical" />
 
 			<TextView
 				android:id="@+id/recommend_des"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:layout_marginTop="10dp"
+				android:layout_marginTop="@dimen/recommend_list_general_margine"
 				android:ellipsize="end"
 				android:maxLines="2"
 				android:textColor="@color/recommend_list_text"/>
