[DREM-1412] レイアウト指示書の適用
「番組表タイトル矢印」実装対応

Change-Id: I91904b0b43e7d0da6349c9f9383568573726a3ef

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -49,4 +49,14 @@
         android:textColor="#FFFFFF"
         android:textSize="@dimen/main_header_title_text_size"
         android:textStyle="bold" />
+
+    <!-- 番組表カレンダー矢印 -->
+    <ImageView
+        android:id="@+id/tv_program_list_main_layout_calendar_arrow"
+        android:layout_width="@dimen/tv_program_list_main_layout_calendar_arrow_width"
+        android:layout_height="@dimen/tv_program_list_main_layout_calendar_arrow_height"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/header_layout_text"
+        android:background="@mipmap/icon_normal_arrow_bottom"
+        android:visibility="gone"/>
 </RelativeLayout>
