--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -329,6 +329,8 @@
 	<dimen name="panel_content_thumbnail_margin_top">16dp</dimen>
     <dimen name="tv_program_list_cur_time_height">1dp</dimen>
     <dimen name="panel_content_detail_margin_top">4dp</dimen>
+    <dimen name="tv_program_list_main_layout_calendar_arrow_width">24dp</dimen>
+    <dimen name="tv_program_list_main_layout_calendar_arrow_height">24dp</dimen>
 
     <!--アプリケーション情報-->
     <dimen name="application_info_image_width">128dp</dimen>
